--- a/nest-grpc-server/tsconfig.json
+++ b/nest-grpc-server/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "nest-grpc-server/dist",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
